--- a/الهواتف.html
+++ b/الهواتف.html
@@ -120,7 +120,7 @@
 
     // قائمة 15 هاتف مع أسعار لكل سعة (تقريبية)
     const phones = [
-      {model: 'S10', prices:{'128':12000,'256':140,'512':170}, img:'PF/S22U1.jpg'},
+      {model: 'S10', prices:{'128':12000,'256':140,'512':170}, img:'S22U1.jpg'},
       {model: 'S10e', prices:{'128':100,'256':120,'512':150}, img:'placeholder.jpg'},
       {model: 'S20', prices:{'128':180,'256':200,'512':230}, img:'placeholder.jpg'},
       {model: 'S20 FE', prices:{'128':160,'256':180,'512':210}, img:'placeholder.jpg'},
@@ -226,3 +226,4 @@
   </script>
 </body>
 </html>
+
