--- a/الهواتف.html
+++ b/الهواتف.html
@@ -67,7 +67,7 @@
   <main class="container">
     <section class="hero">
       <h2>مرحباً بك في متجر ASANHANI TK</h2>
-      <p>اختر هاتفك المفضل نقداً أو بالتقسيط حسب راحتك.</p>
+      <pstyle="color: black;">اختر هاتفك المفضل نقداً أو بالتقسيط حسب راحتك.</p>
     </section>
 
     <section class="products" id="products">
@@ -226,4 +226,5 @@
   </script>
 </body>
 </html>
+
 
