--- a/الاكترونيات.html
+++ b/الاكترونيات.html
@@ -63,7 +63,7 @@
 <main class="container">
   <section class="hero">
     <h2>قسم الإلكترونيات</h2>
-    <p>اختر المنتج الإلكتروني المفضل نقداً أو بالتقسيط حسب راحتك.</p>
+    <p style="color: black;">اختر المنتج الإلكتروني المفضل نقداً أو بالتقسيط حسب راحتك.</p>
   </section>
 
   <section class="products" id="products"></section>
@@ -212,3 +212,4 @@ function resetCalc(){
 </script>
 </body>
 </html>
+
