--- a/الادوات المنزلية.html
+++ b/الادوات المنزلية.html
@@ -63,7 +63,7 @@
 <main class="container">
   <section class="hero">
     <h2>قسم الأدوات المنزلية</h2>
-    <p>اختر المنتج المنزلي المفضل نقداً أو بالتقسيط حسب راحتك.</p>
+    <p style="color: black;">اختر المنتج المنزلي المفضل نقداً أو بالتقسيط حسب راحتك.</p>
   </section>
 
   <section class="products" id="products"></section>
@@ -213,3 +213,4 @@ function resetCalc(){
 </script>
 </body>
 </html>
+
