--- a/admin/index.html
+++ b/admin/index.html
@@ -1,11 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Admin Panel</title>
+    <meta charset="UTF-8">
+    <title>Admin</title>
+    <!-- ربط Netlify CMS -->
+    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
   </head>
   <body>
-    <!-- Load the CMS -->
-    <script src="https://unpkg.com/netlify-cms@^2.15.57/dist/netlify-cms.js"></script>
+    <h1>لوحة إدارة Netlify CMS</h1>
+    <p>يمكنك تعديل منتجات متجرك من هنا.</p>
   </body>
 </html>
