--- a/admin/index.html
+++ b/admin/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>Admin</title>
-    <!-- ربط Netlify CMS -->
-    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
   </head>
   <body>
-    <h1>لوحة إدارة Netlify CMS</h1>
-    <p>يمكنك تعديل منتجات متجرك من هنا.</p>
+    <!-- هذا المكان الذي ستظهر فيه لوحة الإدارة -->
+    <div id="nc-root"></div>
+
+    <!-- تحميل Netlify CMS -->
+    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
   </body>
 </html>
