--- a/الوثيقة.html
+++ b/الوثيقة.html
@@ -81,7 +81,7 @@
     <p>• الاسم: ...............................  الضامن: ...............................</p>
     <p>• البصمة والتوقيع: (...........)  البصمة والتوقيع: (...........)</p>
 
-    <a class="back-btn" href="المتجر جديد.html">العودة للصفحة الرئيسية</a>
+    <a class="back-btn" href="index.html">العودة للصفحة الرئيسية</a>
   </div>
 
   <div class="social">
@@ -102,3 +102,4 @@ document.getElementById('year').textContent = new Date().getFullYear();
 
 </body>
 </html>
+
