--- a/الهواتف.html
+++ b/الهواتف.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>ASANHANI TK - متجر الهواتف كاش وتقسيط</title>
+  <title>ASANHANI TK - الهواتف</title>
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700;900&display=swap" rel="stylesheet">
   <style>
     :root{
@@ -21,9 +21,6 @@
     .logo{width:56px;height:56px;background:white;color:var(--accent);border-radius:12px;display:flex;align-items:center;justify-content:center;font-weight:900}
     h1{margin:0;font-size:22px}
     p.lead{margin:6px 0 0;opacity:.95;font-size:16px}
-    .hero{margin-top:22px;text-align:center}
-    .hero h2{font-size:28px;margin-bottom:8px}
-    .hero p{font-size:16px;color:black}
     .products{display:grid;grid-template-columns:repeat(3,1fr);gap:18px;margin-top:30px}
     @media (max-width:920px){.products{grid-template-columns:repeat(2,1fr)}}
     @media (max-width:600px){.products{grid-template-columns:1fr}}
@@ -46,7 +43,7 @@
     <div class="brand">
       <div class="logo">A</div>
       <div>
-        <h1>ASANHANI TK</h1>
+        <h1>ASANHANI TK - الهواتف</h1>
         <p class="lead">أفضل العروض، تقسيط مريح ودفعات مرنة.</p>
       </div>
     </div>
@@ -54,13 +51,8 @@
 </header>
 
 <main class="container">
-  <section class="hero">
-    <h2>مرحباً بك في متجر ASANHANI TK</h2>
-    <p>اختر هاتفك المفضل نقداً أو بالتقسيط حسب راحتك.</p>
-  </section>
-
   <section class="products" id="products">
-    <!-- المنتجات ستظهر هنا ديناميك -->
+    <!-- المنتجات الديناميك ستظهر هنا -->
   </section>
 
   <div class="calc-card" id="calcCard">
@@ -90,13 +82,6 @@
     </div>
 
     <div id='result' style='margin-top:12px;font-weight:800'></div>
-
-    <div class='social'>
-      <a href='https://wa.me/967773333413' target='_blank'>W</a>
-      <a href='https://wa.me/967776896504' target='_blank'>W</a>
-      <a href='#' target='_blank'>I</a>
-      <a href='#' target='_blank'>T</a>
-    </div>
   </div>
 
   <footer>
@@ -107,32 +92,29 @@
 <script>
   document.getElementById('year').textContent = new Date().getFullYear();
 
-  // المنتجات الآن مؤقتاً باستخدام مصفوفة محلية
-  const phones = [
-    {model: 'S10', price: 12000, image: '/images/uploads/S22U1.jpg'},
-    {model: 'S10e', price: 10000, image: '/images/uploads/placeholder.jpg'},
-    {model: 'S20', price: 18000, image: '/images/uploads/placeholder.jpg'},
-    {model: 'S20 FE', price: 16000, image: '/images/uploads/placeholder.jpg'},
-    {model: 'S21', price: 19000, image: '/images/uploads/placeholder.jpg'}
-  ];
-
-  const container = document.getElementById('products');
-  phones.forEach((p, idx)=>{
-    const card = document.createElement('div');
-    card.className='product';
-    card.innerHTML=`
-      <div class="thumb"><img src="${p.image}" alt="${p.model}"></div>
-      <div>
-        <div style="font-weight:700">${p.model}</div>
-        <div class="price">${p.price}$</div>
-        <div class="actions">
-          <button class="btn btn-primary" onclick="selectProduct('${p.model}', ${p.price})">كاش</button>
-          <button class="btn btn-outline" onclick="selectProduct('${p.model}', ${p.price})">تقسيط</button>
-        </div>
-      </div>
-    `;
-    container.appendChild(card);
-  });
+  // قراءة المنتجات ديناميك من products.json
+  fetch('/products.json')
+    .then(response => response.json())
+    .then(phones => {
+      const container = document.getElementById('products');
+      phones.forEach((p)=>{
+        const card = document.createElement('div');
+        card.className='product';
+        card.innerHTML=`
+          <div class="thumb"><img src="${p.image}" alt="${p.title}"></div>
+          <div>
+            <div style="font-weight:700">${p.title}</div>
+            <div class="price">${p.price}$</div>
+            <div class="actions">
+              <button class="btn btn-primary" onclick="selectProduct('${p.title}', ${p.price})">كاش</button>
+              <button class="btn btn-outline" onclick="selectProduct('${p.title}', ${p.price})">تقسيط</button>
+            </div>
+          </div>
+        `;
+        container.appendChild(card);
+      });
+    })
+    .catch(err => console.error("خطأ في جلب المنتجات:", err));
 
   // الحاسبة
   const increaseMap = {1:7,2:12,3:16,4:20,5:23,6:25,7:28,8:31,9:34,10:36,11:39,12:41};
