--- a/الهواتف.html
+++ b/الهواتف.html
@@ -89,76 +89,13 @@
   </footer>
 </main>
 
+<!-- مكتبات axios و marked -->
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+
 <script>
   document.getElementById('year').textContent = new Date().getFullYear();
 
-  // قراءة المنتجات ديناميك من products.json
-  fetch('/products.json')
-    .then(response => response.json())
-    .then(phones => {
-      const container = document.getElementById('products');
-      phones.forEach((p)=>{
-        const card = document.createElement('div');
-        card.className='product';
-        card.innerHTML=`
-          <div class="thumb"><img src="${p.image}" alt="${p.title}"></div>
-          <div>
-            <div style="font-weight:700">${p.title}</div>
-            <div class="price">${p.price}$</div>
-            <div class="actions">
-              <button class="btn btn-primary" onclick="selectProduct('${p.title}', ${p.price})">كاش</button>
-              <button class="btn btn-outline" onclick="selectProduct('${p.title}', ${p.price})">تقسيط</button>
-            </div>
-          </div>
-        `;
-        container.appendChild(card);
-      });
-    })
-    .catch(err => console.error("خطأ في جلب المنتجات:", err));
-
-  // الحاسبة
-  const increaseMap = {1:7,2:12,3:16,4:20,5:23,6:25,7:28,8:31,9:34,10:36,11:39,12:41};
-  const rates = {USD:1, SAR:3.8, YER:540};
-
-  function selectProduct(name, price){
-    document.getElementById('selectedProduct').textContent = name + ' — ' + price + '$';
-    document.getElementById('price').value = price;
-  }
-
-  function calculate(){
-    let P = parseFloat(document.getElementById('price').value) || 0;
-    let D = parseFloat(document.getElementById('down').value) || 0;
-    let months = parseInt(document.getElementById('months').value,10) || 1;
-    if(months<1) months=1;
-    if(months>12) months=12;
-    let remaining = P - D;
-    if(remaining<0) remaining=0;
-    let perc = increaseMap[months] || 0;
-    let increaseUSD = remaining*perc/100;
-    let totalUSD = remaining + increaseUSD;
-    let monthlyUSD = totalUSD/months;
-
-    let currency = document.getElementById('currency').value;
-    let rate = rates[currency];
-    let displayTotal = (totalUSD*rate).toFixed(2);
-    let displayMonthly = (monthlyUSD*rate).toFixed(2);
-    let displayIncrease = (increaseUSD*rate).toFixed(2);
-
-    document.getElementById('result').innerHTML = `القسط الشهري: ${displayMonthly} ${currency}<br>إجمالي بعد ${months} شهر: ${displayTotal} ${currency}<br>الزيادة على المبلغ المتبقي: ${displayIncrease} ${currency}`;
-  }
-
-  function resetCalc(){
-    document.getElementById('price').value=0;
-    document.getElementById('down').value=0;
-    document.getElementById('months').value=1;
-    document.getElementById('currency').value='USD';
-    document.getElementById('selectedProduct').textContent='لم يتم الاختيار';
-    document.getElementById('result').textContent='';
-  }
-</script>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-<script>
   async function loadProducts() {
     const container = document.getElementById('products');
 
@@ -166,7 +103,7 @@
       'products/S10.md',
       'products/S10e.md',
       'products/S20.md'
-      // أضف كل ملفات Markdown هنا
+      // أضف باقي ملفات Markdown هنا
     ];
 
     for (const file of files) {
@@ -208,7 +145,7 @@
 
   loadProducts();
 
-  // الحاسبة
+  // حاسبة الأقساط
   const increaseMap = {1:7,2:12,3:16,4:20,5:23,6:25,7:28,8:31,9:34,10:36,11:39,12:41};
   const rates = {USD:1, SAR:3.8, YER:540};
 
@@ -250,4 +187,3 @@
 </script>
 </body>
 </html>
-
