--- a/admin/index.html
+++ b/admin/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Admin</title>
-  </head>
-  <body>
-    <!-- هذا المكان الذي ستظهر فيه لوحة الإدارة -->
-    <div id="nc-root"></div>
+<head>
+  <meta charset="UTF-8">
+  <title>لوحة إدارة ASANHANI TK</title>
+</head>
+<body>
+  <div id="nc-root"></div>
 
-    <!-- تحميل Netlify CMS -->
-    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
-  </body>
+  <!-- تحميل Netlify CMS -->
+  <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+</body>
 </html>
